# terminal_theme_switcher

./: AGENTS.md  Cargo.toml  README.md
scripts/: install.sh
src/: apply.rs  cli.rs  config.rs  contrast.rs  main.rs  shell.rs  theme.rs  tui.rs
src/tui/: colors.rs  creator.rs  home.rs  library.rs  mod.rs  widgets.rs
