[package]
name = "switch-theme"
version = "2.0.0"
edition = "2021"
description = "Interactive terminal theme switcher for macOS and modern terminals"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.12"
